<resources>
    <string name="app_name">Orchestra</string>

    <!--    examples and animations-->
    <string name="examples_title">Examples</string>

    <string name="example_interpolator">Interpolators</string>
    <string name="example_extensions">Extensions</string>
    <string name="example_scale">Scale</string>
    <string name="example_fade">Fade</string>
    <string name="example_bouncing">Bouncing</string>
    <string name="example_slide">Slide</string>
    <string name="example_constrains_layout">Constrains layout</string>
    <string name="example_coordinator_layout">Coordinator layout</string>

    <string name="animate_image">Animate Image</string>
    <string name="fade_in">Fade in</string>
    <string name="fade_out">Fade out</string>
    <string name="translate">Translate</string>
    <string name="scale">Scale</string>
    <string name="slide">Slide</string>
    <string name="slide_out">Slide out</string>
    <string name="circular_reveal">Circular reveal</string>
    <!--    examples and animations-->

    <!--    animation configuration-->
    <string name="duration">Duration</string>
    <string name="initial_alpha">Initial alpha</string>
    <string name="final_alpha">Final alpha</string>
    <string name="direction">Direction</string>
    <string name="animate">Animate</string>
    <string name="direction_up">Up</string>
    <string name="direction_down">Down</string>
    <string name="direction_left">Left</string>
    <string name="direction_right">Right</string>
    <!--    animation configuration-->

    <!--    constrains example-->
    <string name="constrains_layout_hint">Touch the image to animate</string>
    <string name="awesome_butterfly">Awesome butterfly</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!--    constrains example-->

    <!--    bouncing example-->
    <string name="awesome_text">Awesome text</string>
    <string name="awesome_button">Awesome button to gain attention</string>
    <string name="long_quote">O bom senso é a coisa do mundo melhor partilhada, pois cada um pensa estar tão bem provido dele, que mesmo os mais difíceis de contentar em qualquer outra coisa não costumam desejar tê-lo mais do que o têm</string>
    <string name="bouncing_rationale">once upon a time there was two stick persons som confusion mispeled words and lack of order.... but a effect can tell where you should focus. and it is not me although I\'m the explanation of the whole point</string>
    <string name="at_last_message">At last!!</string>
    <string name="example_background_text_color">Background and text color</string>
    <string name="rotate">Rotate</string>
    <!--    bouncing example-->

    <!--    animate view-->
    <string name="animations">Animations</string>
    <string name="code">Code</string>

    <string name="open_parenthesis" translatable="false">(</string>
    <string name="close_parenthesis" translatable="false">)</string>

    <string name="initial_setup">Initial setup</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="code_fade">
        val smallScale = 0.3f\n
        val fullScale = 1\n
\n
        Orchestra.setup {\n
            \ton(squareLeft, squareCenter, squareRight)\n
            \t\t        .alpha(0)\n
            \t\t        .scale(smallScale)\n
        }\n
        Orchestra.launch {\n
            \tval duration = 600L\n
            \tval blink = animations()\n
            \t\t        .parallel {\n
            \t\t\t          fadeIn {\n
            \t\t\t\t            this.duration = duration\n
            \t\t\t          }\n
            \t\t\t          scale(fullScale) {\n
            \t\t\t\t            this.duration = duration\n
            \t\t\t          }\n
            \t\t        }\n
            \t\t        .parallel {\n
            \t\t\t          fadeOut {\n
            \t\t\t\t            this.duration = duration\n
            \t\t\t          }\n
            \t\t\t          scale(smallScale) {\n
            \t\t\t\t            this.duration = duration\n
            \t\t\t          }\n
            \t\t        }\n
            \t\t        .delay(600)\n
\n
            \tparallel {\n
            \t    on(squareLeft).repeat(3, blink)\n
            \t    on(squareCenter).delay(400).repeat(3, blink)\n
            \t    on(squareRight).delay(800).repeat(3, blink)\n
            \t}\n
        }
    </string>
    <string name="button_run">Run animation</string>
    <string name="extension_initial_text">Initial Value</string>
    <string name="extension_final_text">Modified text</string>
    <string name="code_slide">
val slidingViews = arrayOf(titleText, loginText, loginEditText, passwordText, passwordEditText, loginButton)\n
\n
Orchestra.setup {\n
\t  on(form, *slidingViews).invisible()\n
}\n
\n
Orchestra.launch {\n
\t  delay(500)\n
\n
\t  parallel {\n
\t\t  val slideDuration = 600L\n
\t\t  val halfSlideDuration = slideDuration / 2\n
\n
\t\t  on(form).parallel {\n
\t\t\t  slide(Direction.Up) {\n
\t\t\t\t  duration = slideDuration\n
\t\t\t  }\n
\t\t\t  fadeIn {\n
\t\t\t\t  duration = halfSlideDuration\n
\t\t\t  }\n
\t\t  }\n
\n
\t\t  on(*slidingViews)\n
\t\t\t\t  .delay(halfSlideDuration)\n
\t\t\t\t  .slide(Direction.Up) {\n
\t\t\t\t\t  duration = slideDuration\n
\t\t\t\t  }\n
\t  }\n
}
    </string>
    <string name="button_show_code">show code</string>
    <string name="button_hide_code">hide code</string>
    <string name="button_run_slowly">Run slowly</string>
    <string name="button_start">start animation</string>
    <string name="button_stop">stop animation</string>

    <string name="accelerate_decelerate_interpolator">AccelerateDecelerateInterpolator</string>
    <string name="accelerate_interpolator">AccelerateInterpolator</string>
    <string name="anticipate_interpolator">AnticipateInterpolator</string>
    <string name="bounce_interpolator">BounceInterpolator</string>
    <string name="fast_out_linear_ininterpolator">FastOutLinearInInterpolator</string>
    <string name="overshoot_interpolator">OvershootInterpolator</string>

    <string name="splash">Splash</string>
    <!--    animate view-->
</resources>

