<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        style="@style/ConfigName"
        android:text="@string/duration"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/durationSeekBar"
        style="@style/ConfigSeekBar"
        android:max="30000"
        android:progress="2000"
        android:visibility="visible" />

    <TextView
        android:id="@+id/initialAlphaText"
        style="@style/ConfigName"
        android:text="@string/initial_alpha"
        tools:visibility="visible" />

    <SeekBar
        android:id="@+id/initialAlphaSeekBar"
        style="@style/ConfigSeekBar"
        android:max="100"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/finalAlphaText"
        style="@style/ConfigName"
        android:text="@string/final_alpha"
        tools:visibility="visible" />

    <SeekBar
        android:id="@+id/finalAlphaSeekBar"
        style="@style/ConfigSeekBar"
        android:max="100"
        android:progress="100"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/scaleText"
        style="@style/ConfigName"
        android:text="@string/scale"
        tools:visibility="visible" />

    <SeekBar
        android:id="@+id/scaleSeekBar"
        style="@style/ConfigSeekBar"
        android:max="30"
        android:progress="5"
        tools:visibility="visible" />

    <Button
        android:id="@+id/animateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:text="@string/animate" />
</LinearLayout>