<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FadeExampleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <View
            android:id="@+id/squareLeft"
            android:layout_width="18dp"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_red_dark"
            android:elevation="3dp" />

        <View
            android:id="@+id/squareCenter"
            android:layout_width="18dp"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_green_light"
            android:elevation="2dp" />

        <View
            android:id="@+id/squareRight"
            android:layout_width="18dp"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"
            android:elevation="1dp" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/code_fade" />
    </ScrollView>

    <Button
        android:id="@+id/btStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start" />

    <Button
        android:id="@+id/btStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_stop" />
</LinearLayout>