<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccbb00"
    tools:context=".activities.BouncingButtonExampleActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@android:color/holo_orange_light"
        android:padding="5dp"
        android:text="@string/awesome_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/butterflyImage1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="50"
        android:src="@drawable/butterfly"
        app:layout_constraintBottom_toTopOf="@id/horizontal30"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/butterflyImage2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="40"
        android:src="@drawable/butterfly"
        app:layout_constraintRight_toLeftOf="@id/butterflyImage1"
        app:layout_constraintTop_toBottomOf="@id/butterflyImage1" />

    <ImageView
        android:id="@+id/butterflyImage3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="30"
        android:src="@drawable/butterfly"
        app:layout_constraintRight_toLeftOf="@id/butterflyImage2"
        app:layout_constraintTop_toBottomOf="@id/butterflyImage2" />

    <ImageView
        android:id="@+id/butterflyImage4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="20"
        android:src="@drawable/butterfly"
        app:layout_constraintRight_toLeftOf="@id/butterflyImage3"
        app:layout_constraintTop_toBottomOf="@id/horizontal30" />

    <ImageView
        android:id="@+id/butterflyImage5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="30"
        android:src="@drawable/butterfly"
        app:layout_constraintBottom_toTopOf="@id/butterflyImage4"
        app:layout_constraintLeft_toRightOf="@id/butterflyImage4" />

    <ImageView
        android:id="@+id/butterflyImage6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="40"
        android:src="@drawable/butterfly"
        app:layout_constraintBottom_toTopOf="@id/butterflyImage5"
        app:layout_constraintLeft_toRightOf="@id/butterflyImage5" />

    <TextView
        android:id="@+id/longQuoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#66cccccc"
        android:padding="3dp"
        android:text="@string/long_quote"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/vertical70"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/awesome_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longQuoteText" />

    <ImageView
        android:id="@+id/twoStickPersons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/two_stick_persons"
        app:layout_constraintBottom_toBottomOf="@id/horizontal70"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/butterflyImage4"
        app:layout_constraintTop_toTopOf="@id/horizontal30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_orange_dark"
        android:paddingLeft="60dp"
        android:text="@string/bouncing_rationale"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/butterflyImage2"
        app:layout_constraintTop_toBottomOf="@id/twoStickPersons" />

    <Button
        android:id="@+id/clickButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="click me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <Button
        android:id="@+id/clickButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="click me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/clickButton1" />

    <Button
        android:id="@+id/clickButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="click me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/clickButton2" />

    <Button
        android:id="@+id/clickButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="click me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/clickButton3" />

    <Button
        android:id="@+id/clickButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="click me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/clickButton4" />
</androidx.constraintlayout.widget.ConstraintLayout>